# gobble-wrta

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  cloud-init.yml  docker-compose.yml  pyproject.toml
html/: index.html
src/: disk.py  event.py  gobble.py  gtfs.py  gtfs_rt.py  logger.py  lookups.py  poll_loop.py  rt_server.py  swiv.py  topology.py  trip_state.py  util.py  vehicle_snapshot.py  vehicles.py
